--- a/styles.css
+++ b/styles.css
@@ -1,50 +1,154 @@
 #output {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-size: 65px;
+    font-stretch: expanded;
+    font-weight: bold;
     text-align: center;
-    background-color: rgb(161, 161, 233);
+    background-color: white;
     color: black;
     border-radius: 8px;
-    border-style: inset;
+    width: 520px;
+    position: absolute;
+    left: 35%;
+    top: 65%;
+    
   }
   
   body {
-    background-color: rgb(68, 71, 112);
+    background-color: rgb(205, 205, 205);
   }
-  
+
   #clean {
-    background-color: red;
-    color: white;
-    border-radius: 8px;
+    position: absolute;
+    left: 81%;
+    top: 50.75%;
+    box-shadow: 3px 4px 0px 0px #8a2a21;
+    background:linear-gradient(to bottom, #c62d1f 5%, #f24437 100%);
+    background-color:#c62d1f;
+    border-radius:18px;
+    border:1px solid #d02718;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-weight:bold;
+    font-size:17px;
+    padding:7px 25px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #810e05;
   }
-  
   #clean:hover {
-    background-color: rgb(6, 126, 66);
-    color: white;
-    border-radius: 8px;
-  
+    background:linear-gradient(to bottom, #f24437 5%, #c62d1f 100%);
+    background-color:#f24437;
   }
+  #clean:active {
+    position: absolute;
+    left: 81%;
+    top: 50.75%;
+   
+  }
+
+  #calculate {
+    position: absolute;
+    left: 71%;
+    top: 50%;
+    box-shadow: 3px 4px 0px 0px #1564ad;
+    background:linear-gradient(to bottom, #79bbff 5%, #378de5 100%);
+    background-color:#4529fa;
+    border-radius:5px;
+    border:1px solid #337bc4;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:17px;
+    font-weight:bold;
+    padding:12px 44px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #528ecc;
+    }
+    #calculate:hover {
+      background:linear-gradient(to bottom, #378de5 5%, #79bbff 100%);
+      background-color:#378de5;
+    }
+    #calculate:active {
+      position: absolute;
+      left: 71%;
+      top: 50%;
+      
+    }
 
   .header {
     padding: 60px;
     text-align: center;
-    background: #1abc9c;
+    background: #11122B;
     color: white;
     font-size: 30px;
+    border-bottom: #1b1f1e;
+    font-weight: bold;
+    border: 3px inset white;
+    border-radius: 8px;
+    text-shadow: 3px 2px rgb(0, 0, 0);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    
   }
   
   #num1 {
     position: absolute;
-    left: 40%;
+    top: 50%;
+    left: 32%;
+    height: 40px;
+    border-radius: 8px;
+    text-align: center;
+    border: inset;
+    font-size: large;
+    font-weight: bold;
   }
 
   #num2 {
     position: absolute;
-    left: 50%;
+    top: 50%;
+    left: 55%;
+    height: 40px;
+    border-radius: 8px;
+    text-align: center;
+    border: inset;
+    font-size: large;
+    font-weight: bold;
   }
 
   #mode {
     position: absolute;
-    left: 40%
+    top: 50.5%;
+    left: 48.5%;
+    width: 55px;
+    height: 40px;
+    font-size: large;
+    font-weight: bold;
+    border-radius: 8px;
+    border: inset;
     
   }
+
+  .footer {
+    height: 100px;
+    padding: 60px;
+    text-align: center;
+    background: #11122B;
+    color: white;
+    font-size: 30px;
+    border-bottom: #1b1f1e;
+    font-weight: bold;
+    border: 3px inset white;
+    border-radius: 8px;
+    text-shadow: 3px 2px rgb(9, 5, 101);
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    width: 92.4%;
+  }
+
+  
+
+  
+
+  
+
